css-align-fix

--- a/src/index.css
+++ b/src/index.css
@@ -7,18 +7,9 @@ html {
   scroll-behavior: smooth;
 }
 
-body {
+* {
   padding: 0;
   margin: 0;
-  box-sizing: border-box;
-  height: 100vh;
-  -webkit-tap-highlight-color: transparent;
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -khtml-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
 }
 
 @media screen and (max-width: 640px) {
